# humalike-lilbro

./: .gitignore  README.md  main.py  pyproject.toml
src/gaming_ai/: __main__.py
src/gaming_ai/bot/: __init__.py  runner.py
src/gaming_ai/config/: settings.py
src/gaming_ai/database/: __init__.py  client.py  migration_runner.py  models.py
src/gaming_ai/database/migrations/: 001_initial.sql
src/gaming_ai/database/repositories/: __init__.py  base.py  conversation.py  event.py  memory.py  opinion.py  player.py  relationship.py  session.py
src/gaming_ai/discord/: __init__.py  audio_receiver.py  bot.py  voice.py
src/gaming_ai/discord/cogs/: events.py  voice.py
src/gaming_ai/models/: __init__.py  behavior.py  conversation.py
src/gaming_ai/services/: conversation.py  conversation_manager.py  humalike.py  memory.py  mood.py  response_generator.py  turn_manager.py
src/gaming_ai/services/llm/: __init__.py  client.py  gemini_client.py  service.py
src/gaming_ai/utils/: __init__.py  environment.py  logging.py
src/gaming_ai/voice/: __init__.py  language.py  pipeline.py  speaker.py  stt.py  stt_local.py  tts.py
